--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "lint": "eslint . --ext .ts",
@@ -23,7 +23,6 @@
     "express-session": "^1.18.0",
     "helmet": "^8.0.0",
     "i18next": "^24.0.2",
-    "i18next-express-middleware": "^1.11.5",
     "i18next-fs-backend": "^2.3.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
@@ -31,7 +30,14 @@
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "slugify": "^1.6.6",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "midtrans-client": "^1.3.2",
+    "i18next-http-middleware": "^3.6.0",
+    "exceljs": "^4.4.0",
+    "json2csv": "^6.0.0-alpha.2",
+    "pdfkit": "^0.15.0",
+    "@faker-js/faker": "^8.4.1",
+    "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -47,6 +53,7 @@
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "tsx": "^4.19.0"
   }
 }
