--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ SIGNED_URL_TTL=600
 MIDTRANS_SERVER_KEY=SB-Mid-server-xxxxxxxxxxxx
 MIDTRANS_CLIENT_KEY=SB-Mid-client-xxxxxxxxxxxx
 MIDTRANS_IS_PRODUCTION=false
+
+SESSION_SECRET=dev-session-secret
+SESSION_COOKIE_NAME=express_app_session
