add lang session

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev2": "tsx watch --env-file .env --watch src src/server.ts",
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
+    "build2": "tsc",
+    "build": "tsc && cpx \"src/views/**/*\" dist/views && cpx \"public/**/*\" dist/public && cpx \"src/locales/**/*\" dist/locales",
     "start": "node dist/server.js",
     "lint": "eslint . --ext .ts",
     "db:migrate": "sequelize db:migrate --config config/config.cjs",
@@ -46,9 +47,15 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/csurf": "^1.11.5",
     "@types/express": "^4.17.21",
+    "@types/express-ejs-layouts": "^2.5.4",
     "@types/express-session": "^1.18.1",
+    "@types/json2csv": "^5.0.7",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/midtrans-client": "^1.4.0",
     "@types/node": "^22.7.9",
+    "@types/pdfkit": "^0.17.3",
+    "@types/session-file-store": "^1.2.6",
+    "cpx": "^1.5.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
